force-app/main/default/objects/RT1__AutoMeetingImportNotification__c/RT1__AutoMeetingImportNotification__c.object-meta.xml
<CustomObject>
    <label>AutoMeetingImportNotification</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>AutoMeetingImportNotification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AutoMeetingImportNotifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>