force-app/main/default/objects/RT1__AutoMeetingImportNotification__c/fields/RT1__LeadAssignmentBehavior__c.field-meta.xml
<CustomField>
    <fullName>RT1__LeadAssignmentBehavior__c</fullName>
    <label>Lead Assignment Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assign to self</fullName>
                <default>true</default>
                <label>Assign to self</label>
            </value>
            <value>
                <fullName>Assign to another user</fullName>
            </value>
            <value>
                <fullName>Use lead assignment rule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>