force-app/main/default/objects/RT1__AutoMeetingImportNotification__c/fields/RT1__LeadSource__c.field-meta.xml
<CustomField>
    <fullName>RT1__LeadSource__c</fullName>
    <label>Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>